--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="src/js/teste.js"></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body onload="teste();">
     <h1>BBBBBBBBBBBBBBB</h1>
