fix: background-color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="src/js/teste.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body onload="teste();">
     <h1>BBBBBBBBBBBBBBB</h1>
