fix: conteudo index

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
     <meta name="theme-color" content="#023e7d" />
 
-    <title>Bula Digital Dotter Brasil</title>
+    <title>Template Sistemas Dotter Brasil</title>
     <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="stylesheet" href="css/bd.css" />
+    <link rel="stylesheet" href="css/landing.css" />
 
     <link
       rel="stylesheet"
@@ -55,16 +58,13 @@
 
     <section class="hero">
       <div class="content-section2">
-        <h1>Bula Digital ANVISA</h1>
-        <h2>Simplifique a Gestão de suas Bulas Digitais</h2>
+        <h1>Template Sistemas Dotter Brasil</h1>
+        <h2>Controle de CI, CD, Versionamento Semâtico e Documentação</h2>
         <div>
+          <p>Um modelo de referência para layout de aplicativos e sistemas.</p>
           <p>
-            A solução completa para publicação, edição e controle de bulas
-            digitais em total conformidade com a RDC 885.
-          </p>
-          <p>
-            Conformidade total com a RDC 885 da Anvisa. Segurança,
-            acessibilidade e controle total na publicação de bulas digitais.
+            Segurança e padronização no versionamento e documentação dos
+            sistemas, além de layouts e interface com agente de IA integrado.
           </p>
         </div>
         <a href="#contato" class="cta-button">Saiba Mais</a>
@@ -72,38 +72,39 @@
 
       <div class="hero-image">
         <img
-          src="https://yata-apix-83b78b76-7409-4174-9b42-bba0ba047415.s3-object.locaweb.com.br/f29e10557f4245fb8ef4ec51a58aa7b2.png"
-          alt="Bula Digital"
+          src="https://yata.s3-object.locaweb.com.br/929a9e448198c4f63d987771c70aa2d305953ba27d2c214809381d9206c3de37"
+          alt="Aplicativos e Sistemas Dotter Brasil"
         />
       </div>
     </section>
 
     <section id="beneficios" class="content-section">
-      <h2>Benefícios da Bula Digital</h2>
+      <h2>Benefícios do Template</h2>
       <div class="benefits-grid">
         <div class="benefit">
-          <h3>Conformidade Regulatória</h3>
+          <h3>Padronização e Automação</h3>
           <p>
-            Atende à RDC 885 e segue as melhores práticas da indústria
-            farmacêutica.
+            Assegura os padrões de layouts, além do processo de versionamento
+            semântico e documentação base dos sistemas.
           </p>
           <i class="fa fa-user-md fa-3x" style="color: #4ca1af"></i>
         </div>
         <div class="benefit">
           <h3>Acessibilidade</h3>
           <p>
-            Facilidade para pacientes e profissionais da saúde acessarem
-            informações seguras.
+            Facilidade para navegação pela documentação e códigos fonte com
+            auxílio da Dotty (agente de IA) para manutenção, desenvolvimento de
+            debug de sistemas.
           </p>
           <i class="fa fa-signing fa-3x" style="color: #4ca1af"></i>
           <i class="fa fa-commenting-o fa-3x" style="color: #4ca1af"></i>
           <i class="fa fa-volume-up fa-3x" style="color: #4ca1af"></i>
         </div>
         <div class="benefit">
-          <h3>Segurança Avançada</h3>
+          <h3>Segurança</h3>
           <p>
-            Controle total sobre a publicação e edição das bulas, garantindo
-            rastreabilidade.
+            Em uma próxima fase (versão) vamos incluir os métodos de login e
+            audit trail para padronização em todos os sistemas.
           </p>
           <i class="fa fa-lock fa-3x" style="color: #4ca1af"></i>
         </div>
@@ -111,7 +112,7 @@
     </section>
 
     <section id="funcionalidades" class="content-section">
-      <h2>Funcionalidades Essenciais para a Indústria Farmacêutica</h2>
+      <h2>Funcionalidades Essenciais para o Desenvolvimento de Sistemas</h2>
       <br />
       <div class="benefit">
         <div class="benefits-grid" style="align-items: center; padding: 10px">
@@ -119,8 +120,8 @@
 
           <p style="text-align: justify">
             <strong>Geração de QR Codes</strong><br />
-            Gere automaticamente QR codes para suas bulas digitais, facilitando
-            o acesso rápido e fácil para pacientes e profissionais de saúde.
+            Gere automaticamente QR codes para suas aplicações, facilitando o
+            acesso rápido e fácil para usuários.
           </p>
         </div>
 
@@ -167,58 +168,55 @@
           qualidade e segurança.
         </div>
         <div class="benefit" style="color: white; background: none">
-          <h4>RDC 885</h4>
-          Em conformidade com todos os requisitos da RDC 885 para bulas
-          digitais.
+          <h4>FDA CRF 21 Part 11</h4>
+          Em conformidade com todos os requisitos do FDA.
         </div>
       </div>
     </section>
 
     <section id="gerenciamento" class="content-section">
-      <h2>Gerenciamento Simplificado de Bula Digital</h2>
+      <h2>Gerenciamento Simplificado de Sistemas e Aplicativos</h2>
 
       <div class="benefits-grid">
         <div class="hero-image">
           <img
             src="https://yata.s3-object.locaweb.com.br/929a9e448198c4f63d987771c70aa2d305953ba27d2c214809381d9206c3de37"
-            alt="Gerenciamento da Bula Digital"
+            alt="Gerenciamento de Sistemas"
           />
         </div>
         <div class="benefit">
           <h3>Publicação Simplificada</h3>
           <p>
-            Gerencie suas bulas digitais com facilidade e segurança. Nossa
-            plataforma intuitiva simplifica o processo de publicação, garantindo
-            que suas bulas estejam sempre acessíveis e atualizadas.
+            Utilize comissionamento semântico para o versionamento aotumático:
+            <li>fix: ajustes e correções</li>
+            <li>feat: novas funcionalidades</li>
+            <li>BREAKING CHANGE: versão nova (2.0, 3.0, ...)</li>
           </p>
         </div>
         <div class="benefit">
-          <h3>Repositório RIEP</h3>
+          <h3>Repositório GitHub</h3>
           <p>
-            Tenha controle total do seu repositório de bulas digitais (RIEP).
-            Mantenha suas bulas organizadas e em conformidade com as exigências
-            da ANVISA.
+            Tenha controle total do seu repositório GitHub, mantendo o histórico
+            de publicações e versões.
           </p>
         </div>
       </div>
     </section>
 
     <section id="acessibilidade" class="content-section">
-      <h2>Acessibilidade para Pacientes e Profisionais da Saúde</h2>
+      <h2>Acessibilidade para Usuários</h2>
       <div class="benefits-grid">
         <div class="benefit">
           <h3>LIBRAS</h3>
           <p>
-            Através do V-Libras, usuários podem interagir com a bula digital e
+            Através do V-Libras, usuários podem interagir com o sistema e
             receber seu conteúdo na Liguagem Brasileira de Sinais.
           </p>
           <i class="fa fa-signing fa-3x" style="color: #367a8d"></i>
         </div>
         <div class="benefit">
           <h3>Áudio</h3>
-          <p>
-            Ouça cada tópico da bula digital se não puder ou não conseguir ler.
-          </p>
+          <p>Ouça textos se não puder ou não conseguir ler.</p>
           <i class="fa fa-volume-up fa-3x" style="color: #367a8d"></i>
         </div>
         <div class="benefit">
@@ -233,16 +231,16 @@
     </section>
 
     <section id="sobre" class="content-section">
-      <h2>Sobre a Bula Digital</h2>
-      <p>
-        Uma solução inovadora e segura para a gestão e publicação de bulas
-        digitais conforme a Anvisa.
-      </p>
+      <h2>Sobre os Sistemas Dotter Brasil</h2>
+      <p>Soluções inovadoras e seguras para o seu negócio.</p>
     </section>
 
     <section id="contato" class="content-section">
       <h2>Entre em Contato</h2>
-      <p>Saiba como implementar a Bula Digital Dotter Brasil em sua empresa.</p>
+      <p>
+        Saiba como implementar aplicativos e sistemas com a Dotter Brasil em sua
+        empresa.
+      </p>
       <form
         action="mailto:sistemas@dotter.com.br"
         method="post"
@@ -256,7 +254,10 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Dotter Brasil. Todos os direitos reservados.</p>
+      <p>
+        &copy; 2025 <a href="https://dotter.com.br">Dotter Brasil</a>. Todos os
+        direitos reservados.
+      </p>
     </footer>
   </body>
 </html>
