fix: estouro de scale benefit-grid

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section id="beneficios" class="content-section">
       <h2>Benefícios do Template</h2>
-      <div class="benefits-grid">
+      <div class="seletor">
         <div class="benefit">
           <h3>Padronização e Automação</h3>
           <p>
@@ -156,7 +156,7 @@
         confidencial.
       </p>
       <br />
-      <div class="benefits-grid">
+      <div class="seletor">
         <div class="benefit" style="color: white; background: none">
           <h4>ANVISA</h4>
           Totalmente aderente às regulamentações da Agência Nacional de
@@ -177,7 +177,7 @@
     <section id="gerenciamento" class="content-section">
       <h2>Gerenciamento Simplificado de Sistemas e Aplicativos</h2>
 
-      <div class="benefits-grid">
+      <div class="seletor">
         <div class="hero-image">
           <img
             src="https://yata.s3-object.locaweb.com.br/929a9e448198c4f63d987771c70aa2d305953ba27d2c214809381d9206c3de37"
@@ -205,7 +205,7 @@
 
     <section id="acessibilidade" class="content-section">
       <h2>Acessibilidade para Usuários</h2>
-      <div class="benefits-grid">
+      <div class="seletor">
         <div class="benefit">
           <h3>LIBRAS</h3>
           <p>
